packages/ak-page/src/shadow.less
@import '~akutil-shared-styles/src/mixins/select-slot-children.less';

@navigation-z-index: 2;
@content-z-index: 1;

.navigation {
  position: fixed;
  top: 0;
  left: 0;
  z-index: @navigation-z-index;
}

.main {
  margin-left: 80px;
  transition: margin-left 200ms;
  z-index: @content-z-index;

  .main-fixed {
    max-width: 1280px;
    margin: auto;
  }
}
@main-slot-direct-children: {
  position: relative;
  z-index: @content-z-index;
};
.select-slot-children('main-slot', @main-slot-direct-children);

